fixed visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,10 +476,8 @@ body {
   transition: right 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
   z-index: 10;
   padding: 64px 0;
-  visibility: hidden;
 }
 .header__mobile-sidemenu--open {
-  visibility: visible;
   right: 0;
   pointer-events: auto;
 }
